Fixed spacing from tab to 2 spaces and also fixed warnig on style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,18 @@
 @charset "UTF 8";
 /* Style for the Table of Planets */
 h1 {
-	text-align: center;
+  text-align: center;
 }
 /* Set background to galaxy picture */
 body {
-    margin:0;
-    padding:0;
-    background:url("../image/Galaxy-Wallpaper-Widescreen.png") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  margin:0;
+  padding:0;
+  background:url("../image/Galaxy-Wallpaper-Widescreen.png") no-repeat center center fixed;
+  background-size: cover;
 }
 table {
-	  border-collapse: collapse;
-	  margin:auto;
+  border-collapse: collapse;
+  margin:auto;
 }
 table th {
   text-align: left;
@@ -23,7 +20,7 @@ table th {
   color:#FFF;
   padding:10px 50px 10px 8px;
 }
-table td{
+table td {
   border: 1px Solid #e3e3e3;
   padding: 4px 8px;
   color: Red;
